--- a/ros/config/refbox.yaml
+++ b/ros/config/refbox.yaml
@@ -1,12 +1,10 @@
 refbox:
-    host: !ipv4 c025-workstation-1
-    send-port: !udp-port 4446
-    recv-port: !udp-port 4447
+    ip: 192.168.2.107
+    port: 4446
 
 team:
-    name: bitbots
-    host: !ipv4 127.0.0.1
-    send-port: !udp-port 4446
-    recv-port: !udp-port 4447
-    crypto-key: randomkey
+    name: b-it-bots
+    robot: santosh    
+    port: 4446
+
 
